# projectile-motion

./: .editorconfig  LICENSE  README.md  pyproject.toml
projectile_motion/: main.py
