[tool.poetry]
name = "projectile-motion"
version = "0.1.0"
description = "Projectile motion demo"
authors = ["rakin406"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyglet = "^2.0.15"
sympy = "^1.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
